# vulpecula-backend

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
docker/: Dockerfile
vulpecula/: asgi.py  settings.py  urls.py  wsgi.py
vulpecula/core/: apps.py  tests.py  views.py
